Added Refresh Server Inventory in Admin Area

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -67,6 +67,9 @@
 			<li>
 				<a href="#" onclick="executeAction('/restapi/execute/refresh_dashboard/');">Refresh Widgets</a>
 			</li>
+			<li>
+				<a href="#" onclick="executeAction('/restapi/execute/refresh_server_inventory/');">Refresh Server Inventory</a>
+			</li>
 		</ul>
 	</div>
 	<div class="module" id="recent-actions-module">
