Added Refresh Inventory in Admin Area Renamed old Refesh Inventory in Basic Info Refactored RestServer classes Server Details Page: showing latest modified file

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -68,6 +68,9 @@
 				<a href="#" onclick="executeAction('/restapi/execute/refresh_dashboard/');">Refresh Widgets</a>
 			</li>
 			<li>
+				<a href="#" onclick="executeAction('/restapi/execute/refresh_server_basic_info/');">Refresh Server Basic Info</a>
+			</li>
+			<li>
 				<a href="#" onclick="executeAction('/restapi/execute/refresh_server_inventory/');">Refresh Server Inventory</a>
 			</li>
 		</ul>
