--- a/templates/theme/webui/base.html
+++ b/templates/theme/webui/base.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Max-Age" content="0">
 		<meta http-equiv="Cache-Control" content="no-cache">
-		<link href="{{STATIC_URL}}css/inettuts.css" rel="stylesheet" type="text/css" />
+		<link href="{{STATIC_URL}}css/inettus/inettuts.css" rel="stylesheet" type="text/css" />
 		<link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/win.css"/>
 		<link rel="stylesheet" type="text/css" media="screen" href="{{STATIC_URL}}css/layout.css"/>
 		<link href="{{STATIC_URL}}css/default.css" rel="stylesheet" type="text/css"/>
@@ -177,7 +177,7 @@
 													<table width="100%" height="100%" cellspacing="0" cellpadding="0">
 														<tbody>
 															<tr>
-																<td valign="center" align="center" class="inheritColor"><a href="#Administration" class="menuBar">Administration</a></td>
+																<td valign="center" align="center" class="inheritColor"><a href="/admin/" class="menuBar">Administration</a></td>
 															</tr>
 														</tbody>
 													</table>
@@ -278,6 +278,6 @@
 		<div class="footer"></div>
 		</div>
 		
-    	<script type="text/javascript" src="{{STATIC_URL}}js/inettuts.js"></script>
+    	<script type="text/javascript" src="{{STATIC_URL}}js/inettuts/inettuts-custom-kermit.js"></script>
 	</body>
 </html>
