--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -3,6 +3,8 @@
 
 {% block navbar %}{% endblock %}
 
+{% block bodyclass %}dashboard{% endblock %}
+
 {% block content %}
 <script type="text/javascript">
 
