Added Summary Widget Fixed problem in Widget Refresh from admin menu

--- a/templates/server/details.html
+++ b/templates/server/details.html
@@ -14,9 +14,10 @@
 <br/><br/>
 <div id="columns">
 	<ul id="column1" class="column">
-		{% widget "ServerDetails" hostname%}
+		{% widget "ServerDetails" hostname %}
 	</ul>
 	<ul id="column2" class="column">
+		{% widget "ServerSummary" hostname %}
 		{% widget "SelectedResourceDetails"%}	
 	</ul>
 </div>
