--- a/static/css/kermit/base.css
+++ b/static/css/kermit/base.css
@@ -13,14 +13,14 @@
     Do not change them (better use your own skins/css in the next section).
 ------------------------------------------------------------------------------------------------------ */
 
-@import url('typography.css');
+/*@import url('typography.css');*/
 @import url('structures.css');
-@import url('components.css');
+/*@import url('components.css');
 @import url('tools.css');
 @import url('forms.css');
-@import url('buttons.css');
+@import url('buttons.css');*/
 @import url('tables.css');
-@import url('admin-tools.css');
+/*@import url('admin-tools.css');*/
 
 
 
@@ -32,4 +32,4 @@
 /*@import url('grappelli-skin-basic.css');*/
 
 /*  Grappelli Default Skin: Adds Border-Radius & Background-Gradients to the Grappelli Basic Skin */
-@import url('grappelli-skin-default.css');
+@import url('kermit-skin-default.css');
