Added server details pages

--- a/templates/server/datasource.html
+++ b/templates/server/datasource.html
@@ -1,19 +1,21 @@
-{% load i18n %}
-<strong>{% trans 'Datasources' %}</strong>
-<table>
-	<thead>
-		<tr>
-			<th>{% trans 'Name' %}</th>
-			<th>{% trans 'Server' %}</th>
-			<th>{% trans 'Instance' %}</th>
-			<th>{% trans 'User' %}</th>
-			<th>{% trans 'Max-Connections' %}</th>
-			<th>{% trans 'Min-Connections' %}</th>
-			<th>{% trans 'Cached Statements' %}</th>
-		</tr>
-	</thead>
-	<tbody>
-		{% for datasource in datasources%}
+{% load i18n %} 
+<img src="{{static_url}}images/icons/datasources.png" height="64px" style="float:left;"/>
+<div style="padding: 0px 0px 0px 70px;">
+	<strong>{% trans 'Datasources' %}</strong>
+	<table>
+		<thead>
+			<tr>
+				<th>{% trans 'Name' %}</th>
+				<th>{% trans 'Server' %}</th>
+				<th>{% trans 'Instance' %}</th>
+				<th>{% trans 'User' %}</th>
+				<th>{% trans 'Max-Connections' %}</th>
+				<th>{% trans 'Min-Connections' %}</th>
+				<th>{% trans 'Cached Statements' %}</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for datasource in datasources%}
 			<tr>
 				<td>{{datasource.name}}</td>
 				<td>{{datasource.bddserver}}</td>
@@ -23,7 +25,7 @@
 				<td>{{datasource.min_connections}}</td>
 				<td>{{datasource.num_cached_statements}}</td>
 			</tr>
-		{% endfor %}
-	</tbody>
-</table>
-<br/>
+			{% endfor %}
+		</tbody>
+	</table>
+</div>
