--- a/templates/widgets/serverdetails/serverdetails.html
+++ b/templates/widgets/serverdetails/serverdetails.html
@@ -90,7 +90,11 @@
 				if (event.target.tagName == 'SPAN' && event.target.classList == 'dynatree-expander') {
 					//expand collpse
 				} else {
-					var url = "/server/details/{{hostname}}/" + node.data.instance + '/' + node.data.key + '/' + node.data.type + '/';
+					element_key = node.data.key;
+					if (node.data.key.indexOf('/')!=-1) {
+						element_key = element_key.replace('/', '_');
+					}
+					var url = "/server/details/{{hostname}}/" + node.data.instance + '/' + element_key + '/' + node.data.type + '/';
 					if (node.data.detailsEnabled == 'true') {
 						getDetails(url, 'actual-resource-details', event.target.parentNode);
 						return false;
