Updating Agent Information and adding them to Database

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -38,7 +38,7 @@
 			},
 			success : function() {
 			},
-			timeout: 15000
+			timeout: 120000
 		});	
 </script>
 <style>
@@ -103,13 +103,16 @@
 		<h2>{% trans 'Custom Admin Actions' %}</h2>
 		<ul class="actionlist">
 			<li>
-				<a href="#" onclick="executeAction('/restapi/execute/refresh_dashboard/');">Refresh Widgets</a>
+				<a href="#" onclick="executeAction('/restapi/execute/refresh_dashboard/');">{% trans 'Refresh Widgets' %}</a>
 			</li>
 			<li>
-				<a href="#" onclick="executeAction('/restapi/execute/refresh_server_basic_info/');">Refresh Server Basic Info</a>
+				<a href="#" onclick="executeAction('/restapi/execute/refresh_server_basic_info/');">{% trans 'Refresh Server Basic Info' %}</a>
 			</li>
 			<li>
-				<a href="#" onclick="executeAction('/restapi/execute/refresh_server_inventory/');">Refresh Server Inventory</a>
+				<a href="#" onclick="executeAction('/restapi/execute/refresh_server_inventory/');">{% trans 'Refresh Server Inventory' %}</a>
+			</li>
+			<li>
+				<a href="#" onclick="executeAction('/restapi/execute/update_agents/');">{% trans 'Update Agents Info' %}</a>
 			</li>
 		</ul>
 		</div>
