Added first version of automatic agents call

--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -24,9 +24,11 @@
 		<link href="{{STATIC_URL}}css/kermit/kermit-skin-default.css" rel="stylesheet" type="text/css" />
 		{% endblock %} <!-- EXTRASTYLES -->
 		{% block extrastyle %}{% endblock %} <!-- JAVASCRIPTS -->
-		{% block javascripts %} <script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.6.2.min.js"></script>
+		{% block javascripts %} <
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.6.2.min.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-ui-1.8.15.custom.min.js"></script>
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-hotkeys/jquery.hotkeys.js"></script>
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-form/jquery.form.js"></script>
 		<!-- DynaTree-->
 		<script src="{{STATIC_URL}}js/dynatree/jquery.dynatree.js" type="text/javascript"></script>
 		<!-- JQuery Cookie -->
