--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -38,7 +38,7 @@
 				if(type == 'json') {
 					var jsonObj = jQuery.parseJSON(data);
 					$.each(jsonObj, function(i, resp) {
-						content = '<h2>' + resp.sender + '</h2>';
+						content = '<strong>' + resp.sender + '</strong>';
 						content += '<ul>';
 						content += '<li> Status Code: ' + resp.statuscode + '</li>';
 						content += '<li> Status Message: ' + resp.statusmsg + '</li>';
