--- a/templates/widgets/agent/modalform.html
+++ b/templates/widgets/agent/modalform.html
@@ -43,15 +43,19 @@
 //				$('#bt').attr("disabled", "");
 			} else {
 				$("#" + destination).empty();
-				for (i in data.response) {
-					resp = data.response[i];
-					content = '<strong>' + resp.sender + '</strong>';
-					content += '<ul>';
-					content += '<li> Status Code: ' + resp.statuscode + '</li>';
-					content += '<li> Status Message: ' + resp.statusmsg + '</li>';
-					content += '<li> Data: ' + JSON.stringify(resp.data) + '</li>';
-					content += '</ul>';
-					$(content).appendTo("#response-container");	
+				if (data.type == 'json') {
+					for (i in data.response) {
+						resp = data.response[i];
+						content = '<strong>' + resp.sender + '</strong>';
+						content += '<ul>';
+						content += '<li> Status Code: ' + resp.statuscode + '</li>';
+						content += '<li> Status Message: ' + resp.statusmsg + '</li>';
+						content += '<li> Data: ' + JSON.stringify(resp.data) + '</li>';
+						content += '</ul>';
+						$(content).appendTo("#response-container");	
+					}
+				} else if (data.type == 'html') {
+					$("#" + destination).html(data.response);	
 				}
 				
 				$("#execution-dialog").dialog('close');
