--- a/templates/platforms/oc4j/datasources.html
+++ b/templates/platforms/oc4j/datasources.html
@@ -1,8 +1,8 @@
 {% load i18n %} 
-<img src="{{static_url}}images/icons/datasources.png" height="64px" style="float:left;"/>
-<div style="padding: 0px 0px 0px 70px;">
+<img class="introicon" src="{{static_url}}images/icons/datasources.png"/>
+<div class="info">
 	<strong>{% trans 'Datasources' %}</strong>
-	<table>
+	<table class="server-details">
 		<thead>
 			<tr>
 				<th>{% trans 'Name' %}</th>
