--- a/templates/platforms/oc4j/instance.html
+++ b/templates/platforms/oc4j/instance.html
@@ -1,45 +1,24 @@
 {% load i18n %} 
-<img src="{{static_url}}images/icons/app-settings.png" height="64px" style="float:left;"/>
-<div style="padding: 0px 0px 0px 70px;">
+<img class="introicon" src="{{static_url}}images/icons/app-settings.png"/>
+<div class="info">
 	<strong>{% trans 'OC4J Options'%}</strong>
-	<table>
-		<thead>
-			<th>{% trans 'Option'%}</th>
-		</thead>
-		<tbody>
-			{% for opt in oc4j_options%}
-			<tr>
-				<td> {{opt}} </td>
-			</tr>
-			{% endfor %}
-		</tbody>
-	</table>
+	<div class="codestyle">
+		{% for opt in oc4j_options%}
+			 {{opt}} <br/>
+		{% endfor %}
+	</div>
 	<br/>
 	<strong>{% trans 'Java Start Options'%}</strong>
-	<table>
-		<thead>
-			<th>{% trans 'Option'%}</th>
-		</thead>
-		<tbody>
-			{% for opt in java_start_options%}
-			<tr>
-				<td> {{opt}} </td>
-			</tr>
-			{% endfor %}
-		</tbody>
-	</table>
+	<div class="codestyle">
+		{% for opt in java_start_options%}
+			{{opt}} <br/>
+		{% endfor %}
+	</div>
 	<br/>
 	<strong>{% trans 'Java Stop Options'%}</strong>
-	<table>
-		<thead>
-			<th>{% trans 'Option'%}</th>
-		</thead>
-		<tbody>
-			{% for opt in java_stop_options%}
-			<tr>
-				<td> {{opt}} </td>
-			</tr>
-			{% endfor %}
-		</tbody>
-	</table>
+	<div class="codestyle">
+		{% for opt in java_stop_options%}
+			 {{opt}} <br/>
+		{% endfor %}
+	</div>
 </div>
