--- a/templates/platforms/weblogic/nodemanager.html
+++ b/templates/platforms/weblogic/nodemanager.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
-<img src="{{static_url}}images/icons/application.png" height="64px" style="float:left;"/>
-<div style="border: 1px solid #9A9A9A; padding: 10px 10px 10px 70px;">
+<img class="introicon" src="{{static_url}}images/icons/manager.png"/>
+<div class="infohighlight">
 	<strong>{% trans 'Node Manager Name' %}</strong>: {{nodemanager.name}} <br/>
 	{% for man in nodemanager.node_manager%}
 	<strong>{% trans 'Listen Address' %}</strong>: {{man.listen_address}} <br/>
