--- a/templates/agents/default.html
+++ b/templates/agents/default.html
@@ -1,8 +1,8 @@
 <h3>Response from {{agent}} - {{action}}</h3>
 {% for resp in content %}
-	<span>
+	<div style="padding: 5px">
 		<img src="{{settings.STATIC_URL}}images/icons/Platform_up_16.png" style="margin-right: 10px"/><strong>{{resp.sender}}</strong>: 
-		<br/>
+		<div class="infohighlight">
 		{% for content,data in resp.data.items %}
 			{% for key,value in outputs.items %}
 			 {% if key == content %}
@@ -10,5 +10,7 @@
 			 {% endif %} 
 			{% endfor%}
 		{% endfor %}
-	</span><br/>
+		</div>
+	</div>
+	<br/>
 {% endfor %}
