--- a/static/css/kermit/kermit-skin-default.css
+++ b/static/css/kermit/kermit-skin-default.css
@@ -1876,7 +1876,7 @@ table.server-details thead th.rounded-end {
 }
 
 table.server-details th {
-    background: none repeat scroll 0 0 #B9C9FE;
+    background: none repeat scroll 0 0 #D9D9D9;
     color: #003399;
     font-size: 13px;
     font-weight: normal;
